# tkinter-layout-helpers

./: .gitignore  404.html  LICENSE  README.md  index.html  internal_api_grid_helper.html  internal_api_pack_helper.html  internal_api_parent_manager.html  mkdocs.yml  objects.inv  public_api.html  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docs.yml  draft-release.yml  pypi-deploy.yml  python-package.yml  python-tests.yml
docs/: internal_api_grid_helper.md  internal_api_pack_helper.md  internal_api_parent_manager.md  public_api.md
examples/: grid_span_and_skip.py  grid_staircase.py  pack_sidebars_around_text.py  parent_widget_management.py  staircase.py
search/: search_index.json
tests/: test_context_managers.py  test_grid.py  test_grid_contect_manager.py  test_grid_context_manager.py  test_packer.py  test_tk_grid_helper.py  test_tkinter_helpers.py
tk_grid_helper/: __init__.py  parent_manager.py  tk_grid_helper.py
tkinter_layout_helper/: __init__.py  tk_grid_helper.py
tkinter_layout_helpers/: __init__.py  grid_helper.py  pack_helper.py  parent_manager.py
