[tool.poetry]
name = "tkinter_layout_helpers"
version = "0.3.0"
description = "A library which is intended to simplify a placement of widgets with .grid() and .pack() methods"
authors = ["insolor <insolor@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/insolor/tkinter-layout-helpers"
repository = "https://github.com/insolor/tkinter-layout-helpers"
keywords = ["tkinter", "grid", "pack"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
typing-extensions = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
ruff = "^0.4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",  # Warning about docstrings are suppressed for now
    "ANN002",
    "ANN003",
    "ANN101",
    "C408",
]
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",  # Don't warn about using of asserts in tests
    "ANN001",
    "ANN201",
    "ANN202",
    "D",  # Don't warn about missing documentation in tests
]

"examples/*" = [
    "ANN",
    "D",
    "S311",
    "PL",
    "INP001",
    "ERA001",
]
